--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,10 @@
     --bg-color: black;
     --font-semi-bold: 400px;
     --title-color: white;
+    --small-font: 16px;
+    --h2-font-size: 18px;
+    --text: white;
+    --hover-text: grey;
 
 }
 
@@ -50,6 +54,113 @@ html{
     width: 32px;
     height: 32px;
     background-color: var(--bg-color);
+    color: var(--title-color);
+    display: grid;
+    place-items: left;
+}
+
+.nav__logo-circle{
+    border-radius: 50%;
+}
+
+.nav__toggle{
+    font-size: 1.25rem;
+    cursor: none;    
+}
+
+/* The navigation section for MOBILE*/
+
+@media screen and (max-width: 1150px){
+    .nav__menu{
+        top: -100%;
+        left: 0;
+        background-color: var(--bg-color) .75;
+        width: 100%;
+        text-align: left;
+        backdrop-filter: blur(8px);
+        transition: top .4s;
+    }
+}
+
+.nav__title,
+.nav__name,
+.nav__close{
+    color: var(--title-color);
+
+}
+
+.nav__title{
+    display: block;
+    font-size: var(--small-font);
+    font-weight: var(--font-semi-bold);
+    margin-bottom: 3.5rem;
+}
+
+.nav__name{
+    position: relative;
+    width: max-content;
+    margin: 0 auto 3rem;
+    font-size: var(--h2-font-size);
+}
+
+.nav__name::after, 
+.nav__name::before{
+    content: '';
+    width: 40px;
+    height: 1px;
+    background-color: var(--text);
+    position: absolute;
+    top: 50%;
+    left: -4rem;
+}
+
+nav__name::before{
+    left: initial;
+    right: -4rem;
+}
+
+.nav__list{
+    display: flex;
+    flex-direction: column;
+    row-gap: 2.5rem;
+}
+
+.nav__link{
+    position: relative;
+    color: var(--text);
+    font-size: var(--small-font);
+    font-weight: var(--font-semi-bold);
+    transition: color .3s;
+}
+
+.nav__link::after{
+    content: '';
+    width: 25%;
+    height: 2px;
+    background-color: var(--bg-color);
+    position: absolute;
+    left: 0;
+    bottom: -.5rem;
+    transition: width .3s;
+
+}
+
+.nav__link::hover{
+    color: var(--hover-text);
+
+}
+
+.nav__link::hover::after{
+    width: 25%;
+}
+
+.nav__close{
+    position: absolute;
+    font-size: 1.5rem;
+    top: 1rem;
+    right: 15.rem;
+    cursor: none;
+
 }
 /* END mobile version */
 
